--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- akhir bagian header template -->
 	
 	<div class="wrap">
-		<!-- bagian menu		 -->
+		<!-- bagian menu -->
 		<nav class="menu">
 			<ul>
 				<li>
@@ -24,7 +24,7 @@
 					<a href="#">Tutorial</a>
 				</li>
 				<li>
-					<a href="#">Kontak</a>
+					<a href="#">Informasi</a>
 				</li>
 			</ul>
 		</nav>
