--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<nav class="menu">
 			<ul>
 				<li>
-					<a href="#">Home</a>
+					<a href="index.html">Home</a>
 				</li>
 				<li>
 					<a href="#">Tutorial</a>
