--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<a href="#">Tutorial</a>
 				</li>
 				<li>
-					<a href="#">Informasi</a>
+					<a href="informasi/profile.html">Informasi</a>
 				</li>
 			</ul>
 		</nav>
